crates/swc_ecma_parser/tests/test262-error-references/fail/a39be920807be551.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/a39be920807be551.js:1:5
  |
1 | var default
  |     ^^^^^^^

